Removed Login from Tatami and replaced it with Username.

--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -22,7 +22,7 @@
                                             <h3 class="user-profile">{{profile.firstName + ' ' + profile.lastName }}</h3>
                                         </a>
                                         <a ui-sref="home.profile.statuses({ username: profile.username })">
-                                            <p>@{{profile.login}}</p>
+                                            <p>@{{profile.username}}</p>
                                         </a>
                                     </div>
                                 </div>
