--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -22,9 +22,9 @@
                 </fieldset>
                 <legend translate="account.profile.update"></legend>
                 <div class="form-group">
-                    <label for="login" class="col-sm-2 control-label" translate="account.profile.email"></label>
+                    <label for="username" class="col-sm-2 control-label" translate="account.profile.email"></label>
                     <div class="col-sm-10">
-                        <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userProfile.email" >
+                        <input name="username" type="text" disabled="true" class="col-lg-12" ng-model="userProfile.email" >
 
                     </div>
                 </div>
