--- a/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
+++ b/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
@@ -13,7 +13,7 @@
             </div>
             <div>
                 <a class="h5 text-muted" ui-sref="home.profile.statuses({ username: profile.username })">
-                    @{{ profile.login }}
+                    @{{ profile.username }}
                 </a>
             </div>
         </div>
