--- a/src/main/webapp/scripts/app/login/login.html
+++ b/src/main/webapp/scripts/app/login/login.html
@@ -10,8 +10,8 @@
         <div class="col-md-4 col-md-offset-4">
             <form class="form" role="form" ng-submit="login($event)">
                 <div class="form-group">
-                    <label for="username" translate="global.form.username">Login</label>
-                    <input type="text" class="form-control" id="username" placeholder="{{'global.form.username.placeholder' | translate}}" ng-model="username">
+                    <label for="username" translate="global.form.login">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="{{'global.form.login.placeholder' | translate}}" ng-model="username">
                 </div>
                 <div class="form-group">
                     <label for="password" translate="login.form.password">Password</label>
