--- a/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
@@ -1,11 +1,11 @@
-<form name="deleteForm" ng-submit="confirmDelete(user.login)">
+<form name="deleteForm" ng-submit="confirmDelete(user.username)">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
         <h4 class="modal-title" translate="entity.delete.title">Confirm delete operation</h4>
     </div>
     <div class="modal-body">
-        <p translate="user-management.delete.question" translate-values="{login: '{{user.login}}'}">Are you sure you want to delete this User?</p>
+        <p translate="user-management.delete.question" translate-values="{username: '{{user.username}}'}">Are you sure you want to delete this User?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
