--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -15,18 +15,18 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label" translate="user-management.login">Login</label>
-            <input type="text" class="form-control" name="login"
-                   ng-model="user.login" ng-required="user.id == null" ng-maxlength="50">
+            <label class="control-label" translate="user-management.username">Username</label>
+            <input type="text" class="form-control" name="username"
+                   ng-model="user.username" ng-required="user.id == null" ng-maxlength="50">
 
-            <div ng-show="editForm.login.$invalid">
+            <div ng-show="editForm.username.$invalid">
                 <p class="help-block"
-                   ng-show="editForm.login.$error.required" translate="entity.validation.required">
+                   ng-show="editForm.username.$error.required" translate="entity.validation.required">
                     This field is required.
                 </p>
 
                 <p class="help-block"
-                   ng-show="editForm.login.$error.maxlength" translate="entity.validation.maxlength"
+                   ng-show="editForm.username.$error.maxlength" translate="entity.validation.maxlength"
                    translate-value-max="50">
                     This field cannot be longer than 50 characters.
                 </p>
