--- a/src/main/webapp/scripts/app/login/register/register.html
+++ b/src/main/webapp/scripts/app/login/register/register.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class="alert alert-danger" ng-show="errorUserExists" translate="register.messages.error.userexists">
-                <strong>Login name already registered!</strong> Please choose another one.
+                <strong>Username name already registered!</strong> Please choose another one.
             </div>
 
             <div class="alert alert-danger" ng-show="errorEmailExists" translate="register.messages.error.emailexists">
@@ -27,24 +27,24 @@
             <form ng-show="!success" name="form" role="form" novalidate ng-submit="register()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="login" translate="global.form.username">Username</label>
-                    <input type="text" class="form-control" id="login" name="login" placeholder="{{'global.form.username.placeholder' | translate}}"
-                           ng-model="registerAccount.login" ng-minlength=1 ng-maxlength=50 ng-pattern="/^[a-z0-9]*$/" required>
-                    <div ng-show="form.login.$dirty && form.login.$invalid">
+                    <label class="control-label" for="username" translate="global.form.username">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="{{'global.form.username.placeholder' | translate}}"
+                           ng-model="registerAccount.username" ng-minlength=1 ng-maxlength=50 ng-pattern="/^[a-z0-9]*$/" required>
+                    <div ng-show="form.username.$dirty && form.username.$invalid">
                         <p class="help-block"
-                               ng-show="form.login.$error.required" translate="register.messages.validate.login.required">
+                               ng-show="form.username.$error.required" translate="register.messages.validate.username.required">
                             Your username is required.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.minlength" translate="register.messages.validate.login.minlength">
+                               ng-show="form.username.$error.minlength" translate="register.messages.validate.username.minlength">
                             Your username is required to be at least 1 character.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.maxlength" translate="register.messages.validate.login.maxlength">
+                               ng-show="form.username.$error.maxlength" translate="register.messages.validate.username.maxlength">
                             Your username cannot be longer than 50 characters.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.pattern" translate="register.messages.validate.login.pattern">
+                               ng-show="form.username.$error.pattern" translate="register.messages.validate.username.pattern">
                             Your username can only contain lower-case letters and digits.
                     </p>
                     </div>
@@ -116,7 +116,7 @@
             </form>
             <p></p>
             <div class="alert alert-warning" translate="global.messages.info.authenticated">
-                If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
+                If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (username="admin" and password="admin") <br/>- User (username="user" and password="user").
             </div>
         </div>
     </div>
