--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -190,8 +190,17 @@
     <script src="scripts/app/account/tags/tags.controller.js"></script>
     <script src="scripts/app/account/files/files.js"></script>
     <script src="scripts/app/account/files/files.controller.js"></script>
+
+
     <script src="scripts/app/account/users/users.js"></script>
     <script src="scripts/app/account/users/users.controller.js"></script>
+
+        <script src="scripts/app/account/users/list/search/search.js"></script>
+        <script src="scripts/app/account/users/list/search/search.controller.js"></script>
+        <script src="scripts/app/account/users/list/list.js"></script>
+        <script src="scripts/app/account/users/list/list.directive.js"></script>
+
+
     <script src="scripts/app/account/groups/groups.js"></script>
         <script src="scripts/app/account/groups/groups.controller.js"></script>
         <script src="scripts/app/account/groups/create/create.controller.js"></script>
