--- a/src/main/resources/mails/passwordResetEmail.html
+++ b/src/main/resources/mails/passwordResetEmail.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <p th:text="#{email.reset.greeting(${user.login})}">
+        <p th:text="#{email.reset.greeting(${user.username})}">
             Dear
         </p>
         <p th:text="#{email.reset.text1}">
@@ -13,7 +13,7 @@
         </p>
         <p>
             <a th:href="@{|${baseUrl}/#/login/reset/finish?key=${user.resetKey}|}"
-               th:text="|${user.login}|">Reset Link</a>
+               th:text="|${user.username}|">Reset Link</a>
         </p>
         <p>
             <span th:text="#{email.reset.text2}">Regards, </span>
