--- a/src/main/webapp/scripts/app/login/login.html
+++ b/src/main/webapp/scripts/app/login/login.html
@@ -80,7 +80,7 @@
             <form class="form" role="form" ng-submit="login($event)" accept-charset="utf-8" id="loginForm">
                 <fieldset>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="username" ng-model="username" required="required" placeholder="{{ 'login.form.username' | translate }}" autofocus>
+                        <input type="text" class="form-control" id="username" ng-model="username" required="required" placeholder="{{ 'login.form.email' | translate }}" autofocus>
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" id="password" ng-model="password" required="required" placeholder="{{ 'login.form.password' | translate }}">
