--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -16,6 +16,8 @@
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <script src="lib/ionic/js/angular/angular-resource.js"></script>
         <script src="lib/ng-cordova/dist/ng-cordova.js"></script>
+        <script src="lib/marked/lib/marked.js"></script>
+        <script src="lib/angular-marked/dist/angular-marked.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
