Cleaned up dependencies. They should not be stored in git

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -6,16 +6,16 @@
         <meta http-equiv="Content-Security-Policy" content="*">
         <title></title>
 
-        <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+        <link href="lib/ionic/release/css/ionic.min.css" rel="stylesheet">
         <link href="css/style.min.css" rel="stylesheet">
 
     <!-- compiled css output -->
         <link href="css/ionic.app.css" rel="stylesheet">
 
         <!-- ionic/angularjs js -->
-        <script src="lib/ionic/js/ionic.bundle.js"></script>
-        <script src="lib/ionic/js/angular/angular-resource.js"></script>
-        <script src="lib/ng-cordova/dist/ng-cordova.js"></script>
+        <script src="lib/ionic/release/js/ionic.bundle.js"></script>
+        <script src="lib/angular-resource/angular-resource.js"></script>
+        <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
