--- a/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
+++ b/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
@@ -7,12 +7,12 @@
         </div>
         <div class="well well-sm little-padding">
             <div>
-                <a class="h3" ui-sref="home.profile.statuses({ username: profile.username })">
+                <a class="h3" ui-sref="home.profile.statuses({ email: profile.email })">
                     <strong>{{ profile.firstName + ' ' + profile.lastName }}</strong>
                 </a>
             </div>
             <div>
-                <a class="h5 text-muted" ui-sref="home.profile.statuses({ username: profile.username })">
+                <a class="h5 text-muted" ui-sref="home.profile.statuses({ email: profile.email })">
                     @{{ profile.username }}
                 </a>
             </div>
@@ -100,11 +100,11 @@
                             <img class="img-rounded img-small" ng-style="{ 'background-image': 'url(' + suggestion.avatarURL + ')' }">
                         </span>
                     </a>&nbsp;
-                    <a ui-sref="home.profile.statuses({ username: suggestion.username })">
+                    <a ui-sref="home.profile.statuses({ email: suggestion.email })">
                         <strong>{{ suggestion.firstName + ' ' + suggestion.lastName }}</strong>
                     </a>
                     <br>&nbsp;
-                    <a ui-sref="home.profile.statuses({ username: suggestion.username })">
+                    <a ui-sref="home.profile.statuses({ email: suggestion.email })">
                         <small>@{{ suggestion.username }}</small>
                     </a>
                 </h6>
