--- a/src/main/webapp/scripts/app/account/users/users.html
+++ b/src/main/webapp/scripts/app/account/users/users.html
@@ -33,13 +33,13 @@
                             {{ 'account.users.deactivated' | translate }}
                         </span>
                     </span>
-                            <a ui-sref="home.profile.statuses({ username: user.username })">
+                            <a ui-sref="home.profile.statuses({ email: user.email })">
                                 <strong>
                                     {{ user.firstName + ' ' + user.lastName }}
                                 </strong>
                             </a>
                             <br>
-                            <a ui-sref="home.profile.statuses({ username: user.username })">
+                            <a ui-sref="home.profile.statuses({ email: user.email })">
                                 <small>
                                     @{{ user.username }}
                                 </small>
