--- a/src/main/webapp/scripts/app/home/status/status.html
+++ b/src/main/webapp/scripts/app/home/status/status.html
@@ -5,7 +5,7 @@
                 <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
                     <div ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
-                            <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
+                            <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
@@ -13,15 +13,15 @@
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                    <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
-                                        <span class="text-muted">@{{ status.sharedByUsername }}</span>
+                                    <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
+                                        <span class="text-muted">@{{ status.sharedByEmail }}</span>
                                     </a>
                                     <span translate="home.status.shared"></span>
                                     <br>
                                 </small>
                                 <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
                                 <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
-                                <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
+                                <a ui-sref="tatami.home.profile.statuses({ email: status.email })">
                                     <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                     <small>@{{ status.username }}</small>
                                 </a>
@@ -92,7 +92,7 @@
                                     <span class="badge">{{ status.shares.length }}</span>
                                     <div>
                                         <span ng-repeat="user in status.shares">
-                                            <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                                            <a ui-sref="tatami.home.profile.statuses({ email: user.email })">
                                                 <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
                                             </a>
                                         </span>
