Continued work in getting timeline stuff working. Can view other user timelines, but missing shares/announcements. Work around for login dependancy for acquiring domain in timeline service.

--- a/src/main/webapp/scripts/app/home/timeline/timeline/timelineHeader.html
+++ b/src/main/webapp/scripts/app/home/timeline/timeline/timelineHeader.html
@@ -42,6 +42,7 @@
                 <strong ng-if="currentState == 'mentions'" translate="home.mentions"></strong>
                 <strong ng-if="currentState == 'favorites'" translate="home.favorites"></strong>
                 <strong ng-if="currentState == 'company'" translate="home.companyTimeline"></strong>
+                <strong ng-if="currentState == 'statuses'" translate="home.timeline"><!-- TODO: Put something here --></strong>
             </h3>
         </div>
     </section>
