--- a/src/main/webapp/scripts/app/home/timeline/statuslist/statusList.html
+++ b/src/main/webapp/scripts/app/home/timeline/statuslist/statusList.html
@@ -13,7 +13,7 @@
 
                     <div ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
-                            <a ui-sref="home.profile.statuses({ username: status.username })">
+                            <a ui-sref="statuses({ username: status.username })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
@@ -21,7 +21,7 @@
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                    <a ui-sref="home.profile.statuses({ username: status.username })">
+                                    <a ui-sref="statuses({ username: status.username })">
                                         <span class="text-muted">@{{ status.sharedByUsername }}</span>
                                     </a>
                                     <span translate="status.shared"></span>
@@ -29,7 +29,7 @@
                                 </small>
                                 <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
                                 <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
-                                <a ui-sref="home.profile.statuses({ username: status.username })">
+                                <a ui-sref="statuses({ username: status.username })">
                                     <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                     <small>@{{ status.username }}</small>
                                 </a>
