Include marked configuration, tatami marked library, and marked filter

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -16,7 +16,6 @@
         <script src="lib/ionic/release/js/ionic.bundle.js"></script>
         <script src="lib/angular-resource/angular-resource.js"></script>
         <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-        <script src="lib/marked/lib/marked.js"></script>
         <script src="lib/angular-marked/dist/angular-marked.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
@@ -82,6 +81,10 @@
         <script src="app/shared/user/user.directive.js"></script>
         <script src="app/shared/user/user.detail.directive.js"></script>
         <script src="app/components/post/postbar.directive.js"></script>
+
+        <script src="app/shared/config/tatami.marked.js"></script>
+        <script src="app/shared/config/marked.filter.js"></script>
+        <script src="app/shared/config/marked.config.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
