--- a/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
@@ -5,7 +5,7 @@
         <h4 class="modal-title" translate="entity.delete.title">Confirm delete operation</h4>
     </div>
     <div class="modal-body">
-        <p translate="user-management.delete.question" translate-values="{email: '{{user.email}}'}">Are you sure you want to delete this User?</p>
+        <p translate="user-management.delete.question" translate-values="{login: '{{user.email}}'}">Are you sure you want to delete this User?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
