--- a/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
@@ -1,5 +1,5 @@
 <div>
-    <h2><span translate="user-management.detail.title">User</span> "{{user.username}}"</h2>
+    <h2><span translate="user-management.detail.title">User</span> "{{user.login}}"</h2>
 
     <div class="table-responsive">
         <table class="table table-striped">
@@ -10,14 +10,7 @@
                 </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>
-                    <span translate="user-management.username">Username</span>
-                </td>
-                <td>
-                    <input type="text" class="input-sm form-control" value="{{user.username}}" readonly>
-                </td>
-            </tr>
+
             <tr>
                 <td>
                     <span translate="user-management.firstName">FirstName</span>
