--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,7 @@
         <script src="bower_components/ngToast/dist/ngToast.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
+        <script src="bower_components/openlayers/lib/OpenLayers.js"></script>
 
 
     <!-- build:js({.tmp,src/main/webapp}) scripts/app.js -->
