Ensure that vm.status exists before calling length. Allow dynamic state transition to conversations

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,18 +1,30 @@
 <span>
     <div class="item-avatar item-text-wrap tatami-avatar">
         <img ng-src="{{ vm.status.avatarURL }}"/>
+        <p ng-if="status.type == 'SHARE'">
+            <span class="ion-share">&nbsp;</span>
+            <a ng-click="vm.goToProfile(vm.status.sharedByUsername)">
+                <span class="text-muted">@{{ vm.status.sharedByUsername }}</span>
+            </a>
+            <span>shared</span>
+            <br>
+        </p>
 
         <div class="profile-name">
             <a ng-click="vm.goToProfile(vm.status.username)">
                 <h2 class="inline">{{vm.status.firstName}} {{vm.status.lastName}}</h2>
-                <span class="inline subheading">/ @{{vm.status.username}}</span>
+                <span class="inline subheading">&nbsp;&#183; @{{vm.status.username}}</span>
             </a>
-            <span class="inline date">&nbsp;&#183; {{vm.status.prettyPrintStatusDate}}</span>
+            <p class="date">{{vm.status.prettyPrintStatusDate}}</p>
         </div>
     </div>
 
     <div class="item-body item-text-wrap">
-        <p compile="vm.status.content | markdown"></p>
+        <span ng-if="vm.status.type == 'MENTION_SHARE'" class="ion-share">&nbsp;</span>
+        <span ng-if="vm.status.type == 'MENTION_FRIEND'" class="ion-person">&nbsp;</span>
+        <span ng-if="status.type == 'MENTION_SHARE'">Your status has been shared</span>
+        <span ng-if="status.type == 'MENTION_FRIEND'">New follower</span>
+        <p compile="vm.status.content"></p>
         <p ng-if="vm.status.replyToUsername">
             <span class="ios-android-share"></span>
             <span>In reply to </span>
