--- a/mobile/www/app/shared/status/list/status-list.html
+++ b/mobile/www/app/shared/status/list/status-list.html
@@ -1,9 +1,9 @@
 <ion-content class="tatami-header tatami-footer">
-    <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
+    <ion-refresher ng-if="!vm.$state.includes('*.conversation')" on-refresh="vm.getNewStatuses()"></ion-refresher>
     <ion-list>
         <ion-item ng-repeat="status in vm.statuses">
             <tatami-status status="status" current-user="vm.currentUser" on-delete="vm.remove(status)"></tatami-status>
         </ion-item>
     </ion-list>
-    <ion-infinite-scroll ng-if="vm.finishedTimeline" on-infinite="vm.getNewInfiniteScrollStatuses()"></ion-infinite-scroll>
+    <ion-infinite-scroll ng-if="vm.finishedTimeline || !vm.$state.includes('*.conversation')" on-infinite="vm.getNewInfiniteScrollStatuses()"></ion-infinite-scroll>
 </ion-content>
