Include translation libraries into project

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -17,7 +17,10 @@
         <script src="lib/angular-resource/angular-resource.js"></script>
         <script src="lib/ngCordova/dist/ng-cordova.js"></script>
         <script src="lib/angular-marked/dist/angular-marked.js"></script>
-
+        <script src="lib/angular-translate/angular-translate.js"></script>
+        <script src="lib/messageformat/messageformat.js"></script>
+        <script src="lib/angular-translate-interpolation-messageformat/angular-translate-interpolation-messageformat.js"></script>
+        <script src="lib/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
