--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -68,7 +68,7 @@
                                             </a>
                                         </li>
                                         <li ui-sref-active="active">
-                                            <a ui-sref="account.tags">
+                                            <a ui-sref="tagsFollowing">
                                                 <span class="glyphicon glyphicon-tags"></span>
                                                 <span translate="account.tags.title"></span>
                                             </a>
