--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -194,6 +194,7 @@
         <script src="scripts/app/account/groups/manage/manage.controller.js"></script>
         <script src="scripts/app/account/groups/manage/manage.js"></script>
     <script src="scripts/app/account/topPosters/topPosters.js"></script>
+        <script src="scripts/app/account/topPosters/topPosters.controller.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
     <script src="scripts/app/account/preferences/preferences.js"></script>
@@ -213,6 +214,7 @@
     <script src="scripts/components/auth/services/tag.service.js"></script>
     <script src="scripts/components/auth/services/status.service.js"></script>
     <script src="scripts/components/auth/services/group.service.js"></script>
+        <script src="scripts/components/auth/services/stats.service.js"></script>
     <script src="scripts/app/home/timeline/statuslist/statusList.controller.js"></script>
     <script src="scripts/app/home/presentation/presentation.js"></script>
     <script src="scripts/app/home/presentation/welcome.controller.js"></script>
