--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -6,7 +6,7 @@
             <a ng-click="vm.goToProfile(vm.status.sharedByUsername)">
                 <span class="text-muted">@{{ vm.status.sharedByUsername }}</span>
             </a>
-            <span translate="status.share">share</span>
+            <span translate="status.share.title">share</span>
             <br>
         </p>
 
@@ -22,7 +22,7 @@
     <div class="item-body item-text-wrap">
         <span ng-if="vm.status.type == 'MENTION_SHARE'" class="ion-share">&nbsp;</span>
         <span ng-if="vm.status.type == 'MENTION_FRIEND'" class="ion-person">&nbsp;</span>
-        <span ng-if="status.type == 'MENTION_SHARE'" translate="status.shared">Your status has been shared</span>
+        <span ng-if="status.type == 'MENTION_SHARE'" translate="status.share.mention">Your status has been shared</span>
         <span ng-if="status.type == 'MENTION_FRIEND'" translate="status.follower">New follower</span>
         <p compile="vm.status.content"></p>
         <p ng-if="vm.status.replyToUsername">
