--- a/mobile/www/app/tatami.html
+++ b/mobile/www/app/tatami.html
@@ -10,10 +10,9 @@
         </a>
     </div>
     <div class="title">
-        <a ui-sref="timeline" style="text-decoration: none">
+        <span ui-sref="timeline">
             <img class="title-image" src="img/logo.png" />
-            Tatami
-        </a>
+        </span>
     </div>
     <div class="buttons" ng-if="!(vm.$state.includes('login') || vm.$state.includes('post'))">
         <a ui-sref="post">
