--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -197,8 +197,11 @@
 
         <script src="scripts/app/account/users/list/search/search.js"></script>
         <script src="scripts/app/account/users/list/search/search.controller.js"></script>
+        <script src="scripts/app/account/users/list/following/following.js"></script>
+        <script src="scripts/app/account/users/list/following/following.controller.js"></script>
         <script src="scripts/app/account/users/list/list.js"></script>
         <script src="scripts/app/account/users/list/list.directive.js"></script>
+        <script src="scripts/app/account/users/list/list.controller.js"></script>
 
 
     <script src="scripts/app/account/groups/groups.js"></script>
