--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -56,7 +56,7 @@
                                             </a>
                                         </li>
                                         <li ui-sref-active="active">
-                                            <a ui-sref="searchusers">
+                                            <a ui-sref="following">
                                                 <span class="glyphicon glyphicon-globe"></span>
                                                 <span translate="account.users.title"></span>
                                             </a>
