--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -183,6 +183,8 @@
 
         <script src="scripts/app/account/users/list/search/search.js"></script>
         <script src="scripts/app/account/users/list/search/search.controller.js"></script>
+        <script src="scripts/app/account/users/list/recommended/recommended.js"></script>
+        <script src="scripts/app/account/users/list/recommended/recommended.controller.js"></script>
         <script src="scripts/app/account/users/list/following/following.js"></script>
         <script src="scripts/app/account/users/list/following/following.controller.js"></script>
         <script src="scripts/app/account/users/list/list.js"></script>
